--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-firebase/app": "^16.5.0",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-firebase/firestore": "^16.5.0",
@@ -21,6 +22,7 @@
     "react-native": "0.70.6",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
